[workspace]
members = ["env-config", "taskbase", "taskbase-inject"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
chrono = "0.4"
lazy-env = "0.1"
anyhow = "1.0"
log = "0.4"
const_format = "0.2"
